[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/ai_assist/ui/chat/main_panel.gd" type="Script" id=1]
[ext_resource path="res://addons/ai_assist/ui/widgets/context_list.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/ai_assist/core/ais/image/chatgpt_request.gd" type="Script" id=3]

[node name="MainPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ChatGPTRequest" type="HTTPRequest" parent="."]
use_threads = true
script = ExtResource( 3 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -32

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
margin_right = 880.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VBoxContainer" parent="HSplitContainer/VSplitContainer"]
margin_right = 880.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Error" type="Label" parent="HSplitContainer/VSplitContainer/VSplitContainer"]
visible = false
margin_right = 874.0
margin_bottom = 14.0
text = "ERROR. Check the Output Log"

[node name="Chat" type="RichTextLabel" parent="HSplitContainer/VSplitContainer/VSplitContainer"]
margin_right = 880.0
margin_bottom = 564.0
rect_min_size = Vector2( 400, 250 )
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
meta_underlined = false
scroll_following = true
selection_enabled = true

[node name="CodeOptions" type="PopupMenu" parent="HSplitContainer/VSplitContainer/VSplitContainer/Chat"]
margin_right = 20.0
margin_bottom = 20.0

[node name="SaveResource" type="FileDialog" parent="HSplitContainer/VSplitContainer/VSplitContainer/Chat"]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 150, 52.5 )

[node name="HSplitContainer" type="HBoxContainer" parent="HSplitContainer/VSplitContainer"]
margin_top = 576.0
margin_right = 880.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Prompt" type="LineEdit" parent="HSplitContainer/VSplitContainer/HSplitContainer"]
margin_right = 726.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Send" type="Button" parent="HSplitContainer/VSplitContainer/HSplitContainer"]
margin_left = 730.0
margin_right = 803.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
disabled = true
text = "Send"

[node name="Rewind" type="Button" parent="HSplitContainer/VSplitContainer/HSplitContainer"]
margin_left = 807.0
margin_right = 880.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
disabled = true
text = "Rewind"

[node name="ContextList" parent="HSplitContainer" instance=ExtResource( 2 )]
margin_left = 892.0
margin_right = 1024.0
margin_bottom = 600.0

[connection signal="completions_request_completed" from="ChatGPTRequest" to="." method="_on_ChatGPTRequest_completions_request_completed"]
[connection signal="error" from="ChatGPTRequest" to="." method="_on_ChatGPTRequest_error"]
[connection signal="meta_clicked" from="HSplitContainer/VSplitContainer/VSplitContainer/Chat" to="." method="_on_Chat_meta_clicked"]
[connection signal="meta_hover_ended" from="HSplitContainer/VSplitContainer/VSplitContainer/Chat" to="." method="_on_Chat_meta_hover_ended"]
[connection signal="meta_hover_started" from="HSplitContainer/VSplitContainer/VSplitContainer/Chat" to="." method="_on_Chat_meta_hover_started"]
[connection signal="id_pressed" from="HSplitContainer/VSplitContainer/VSplitContainer/Chat/CodeOptions" to="." method="_on_CodeOptions_id_pressed"]
[connection signal="file_selected" from="HSplitContainer/VSplitContainer/VSplitContainer/Chat/SaveResource" to="." method="_on_FileDialog_file_selected"]
[connection signal="text_changed" from="HSplitContainer/VSplitContainer/HSplitContainer/Prompt" to="." method="_on_Prompt_text_changed"]
[connection signal="text_entered" from="HSplitContainer/VSplitContainer/HSplitContainer/Prompt" to="." method="_on_Prompt_text_entered"]
[connection signal="pressed" from="HSplitContainer/VSplitContainer/HSplitContainer/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="HSplitContainer/VSplitContainer/HSplitContainer/Rewind" to="." method="_on_Rewind_pressed"]
[connection signal="context_removed" from="HSplitContainer/ContextList" to="." method="_on_ContextList_context_removed"]
[connection signal="context_renamed" from="HSplitContainer/ContextList" to="." method="_on_ContextList_context_renamed"]
[connection signal="context_selected" from="HSplitContainer/ContextList" to="." method="_on_ContextList_context_selected"]
